@@ -1,0 +1,2 @@
+PATH_SEPARATOR="@PATH_SEPARATOR@"
+PERL="@PERL@"
