@@ -1,1 +1,0 @@
-PATH_SEPARATOR=@PATH_SEPARATOR@
